# SequencesSorting

./: CMakeLists.txt  main.cpp
Cache/: LRUCDictionary.h  LRUCache.h
Data/: GraphicsConcluded.numbers  IntegersDataPregenerated.txt  IntegersDataPregeneratedSORTED.txt  PersonDataPregenerated.txt  PersonDataPregeneratedSORTED.csv  SequenceStressTestsData.csv  SortingStressTestsData.csv
Generators/: IntegerDataGenerator.cpp  IntegerDataGenerator.h
Graph/: OrientedGraph.h  VisualGraph.h
Hash/: Functional.h  HashTable.h  IDictionary.h
Histogram/: Histogram.cpp  Histogram.h
Interface/: HashTableInterface.h  IntegerSortingInterface.cpp  IntegerSortingInterface.h  Interface.cpp  Interface.h  PersonSortingInterface.cpp  PersonSortingInterface.h  UI.cpp  UI.h
ObjectClasses/: ISet.h  ISortedSequence.h
Sequences/: DynamicArray.h  Iterator.h  LinkedList.h  Sequence.h  Sequences.h
Sorting/: ISorted.h  ISorter.h  Sorting.h  SortingAlgorithms.h
Tests/: DictionaryTests.cpp  DictionaryTests.h  Extractor.h  FileWork.cpp  FileWork.h  LoadTestsCache.cpp  LoadTestsCache.h  Person.h  SequenceFunctionalTests.cpp  SequenceFunctionalTests.h  SequenceStressTests.cpp  SequenceStressTests.h  SequenceTest.cpp  SequenceTest.h  SorterFunctionalTests.cpp  SorterFunctionalTests.h  SorterStressTests.cpp  SorterStressTests.h  Test.cpp  Test.h  TestsCache.cpp  TestsCache.h
